Revision history for App-Countdown

        Add --version, --help, and --man flags.
            - Thanks to Steven Haryanto from
            http://blogs.perl.org/users/shlomi_fish/2012/11/three-command-line-utilities.html#comments

0.0.4   Tue 13 Nov 19:10:14 IST 2012
        URL to the repo changed to fix a typo. Updated Build.PL.

0.0.3   Tue 13 Nov 18:48:59 IST 2012
        Correct the phrasing in the POD of bin/countdown.
            - Thanks to Omer Zak for pointing it out.

0.0.2   Tue 13 Nov 18:12:54 IST 2012
        Fix a bug to accept single digit numbers for delays.

0.0.1   Tue 13 Nov 17:31:24 IST 2012
        First version, released on an unsuspecting world.