@@ -9,6 +9,7 @@ t/00-load.t
 t/manifest.t
 t/pod-coverage.t
 t/pod.t
+t/unit-calc-delay.t
 Makefile.PL
 META.yml
 META.json
